Fixed scrollbar conflict with candidate mngmt
moved overflow from html to body instead

--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -58,10 +58,19 @@
   background: transparent;
 } */
 
-/* Scrollbar to all pages */
-html{
+
+
+body{  
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
   overflow-y: scroll;
 }
+
+/* Scrollbar to all pages */
+/* html{
+  overflow-y: scroll;
+} */
 
 /* width */
 ::-webkit-scrollbar {
@@ -83,12 +92,6 @@ html{
 ::-webkit-scrollbar-thumb:hover {
   background: #3d5c6f;
   /* background: rgb(236, 199, 95) */
-}
-
-body{  
-  font-size: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 nav {
